# mindrian-agno-backend

./: .env.example  .gitignore  .replit  README.md  mindrian_os.py  pyproject.toml  replit.nix  requirements.txt  setup-agent-ui.sh  start.sh
Mindrian/mindrian-agno-ui/: requirements.txt
Mindrian/mindrian-agno-ui/agents/: skill_agents.py
Mindrian/mindrian-agno-ui/mindrian-frontend/: .replit  package.json
Mindrian/mindrian-agno-ui/mindrian-frontend/src/: store.ts
Mindrian/mindrian-agno-ui/mindrian-frontend/src/app/: globals.css
Mindrian/mindrian-agno-ui/mindrian-frontend/src/components/chat/ChatArea/Messages/: MessageItem.tsx
Mindrian/mindrian-agno-ui/mindrian-frontend/src/components/chat/Sidebar/: Sidebar.tsx
Mindrian/mindrian-langgraph/: mindrian_chat.py  upload_ackoff_pyramid.py
Mindrian/mindrian-langgraph/tools/: graphrag_lite.py
agents/: __init__.py  larry.py  minto_pyramid_analysis.py  specialists.py
config/: __init__.py  settings.py
handoff/: __init__.py
knowledge/: __init__.py
prompts/: larry_prompts.py
schemas/: CLAUDE_PROJECT_INSTRUCTIONS.md  SKILL_PACKAGE_GENERATOR_PROMPT.md  example_minto_skill.json  skill_package_schema.json
scripts/: generate_skill.py
teams/: __init__.py  analysis.py  clarification.py  discovery.py  exploration.py  minto_pyramid_analysis_team.py  validation.py
tools/: __init__.py  external_tools.py  fastmcp_tools.py  minto_pyramid_analysis_tools.py  pws_brain.py
