[project]
name = "mindrian-agno-ui"
version = "1.0.0"
description = "Mindrian Platform - AgentOS with Agent UI"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.3.7",
    "anthropic>=0.45.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pinecone>=5.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
